syntax = "proto3";

package proto;

option go_package = "pkg/endpoint/proto";

service Echoer {
    rpc EchoOnce (EchoRequest) returns (EchoResponse);
    rpc EchoStream (stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}
